fix for domains overflow in sidebar classes page

--- a/src/components/admin/classesEvents/ClassesEvents.scss
+++ b/src/components/admin/classesEvents/ClassesEvents.scss
@@ -209,7 +209,7 @@
   }
 
   .filter-domain {
-    max-height: calc(44vh - 6vw);
+    max-height: calc(58.5vh - 13.5vw);
     overflow-y: scroll;
   }
 
